# ccai-insights-demo

./: .gitignore  README.md  generate_synthetic_ccai_data.py  process_transcripts.py  pyproject.toml  tree.txt
docs/: SETUP_GUIDE.md  fix_segmentation_guide.md
src/: generate_synthetic_ccai_data.py  process_transcripts.py
synthetic_transcripts/: synthetic_call_000c49b0-4bdf-4736-85b3-8f3ed34123da.json  synthetic_call_065256bf-7679-4347-ac11-34cf2f6ef367.json  synthetic_call_0bc04740-b03c-4f6c-825b-5335dd149896.json  synthetic_call_1c3c198a-3826-44c2-811b-7fb7c290c88e.json  synthetic_call_32eea827-259d-492e-bbae-a855a0152d76.json  synthetic_call_455af694-64eb-4be9-8b46-1c6c76c075a9.json  synthetic_call_48cf6d9b-c751-4953-b9c9-10232daf0ad7.json  synthetic_call_54a3e663-33b1-4098-98e9-7e238f40767d.json  synthetic_call_7421217a-65a9-4298-a5de-3da3348d94a3.json  synthetic_call_81034a01-ea02-4c2b-8671-387e8be33560.json  synthetic_call_87c8a628-04d5-4e50-9d62-e275d28bd9f0.json  synthetic_call_939ad2d1-c918-4e8a-aa41-53df864c1971.json  synthetic_call_9505d822-6029-440a-9b12-3afa9115be22.json  synthetic_call_95e99179-7073-4a93-85f7-d4c8fb23122c.json  synthetic_call_97bab97a-2bdd-4953-923e-9bc47e545191.json  synthetic_call_9a366d7a-79ae-4dfe-8d03-81cb834f6d70.json  synthetic_call_9a962a88-9ca3-4074-8e65-d3442d80a7ce.json  synthetic_call_af85dcf6-c004-472d-97f8-dae55510e2ee.json  synthetic_call_c06a5073-7802-4f2c-8924-1b58ae2ca0d5.json  synthetic_call_cbb29f22-c601-4f5c-963c-ff294af4f480.json  synthetic_call_ce1e2ebc-ab99-4e86-b8cb-0f3a73519924.json  (+4 more)
(+403 files in other folders)
